Add navBar code to the header in index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,26 @@
           <span class="hamburger"></span>
         </button>
         <nav class="nav">
-          <ul class="nav__list">
+          <ul class="nav__list nav__list--primary">
             <li class="nav__item">
-              <a class="nav__link" href="http://">About Me</a>
+              <a class="nav__link" href="#">About Me</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Skills</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Projects</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Testimonials</a>
+            </li>
+          </ul>
+          <ul class="nav__list nav__list--secondary">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Resume</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Contact</a>
             </li>
           </ul>
         </nav>
