Add hero section with image, title in index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             </li>
           </ul>
         </nav>
+        <section class="hero">
+          <div class="container">
+            <img class="hero__image"
+              src="./assets/images/fallen-angel.jpg"
+              alt="fallen angel art work"
+            />
+            <h1 class="hero__title">Prodip Bain</h1>
+          </div>
+        </section>
       </div>
     </header>
     <script src="./main.js"></script>
