Move hero to separate section in index.html

--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
             </li>
           </ul>
         </nav>
-        <section class="hero">
-          <div class="container">
-            <img class="hero__image"
-              src="./assets/images/fallen-angel.jpg"
-              alt="fallen angel art work"
-            />
-            <h1 class="hero__title">Prodip Bain</h1>
-          </div>
-        </section>
       </div>
     </header>
+
+    <section class="hero">
+      <div class="container">
+        <img
+          class="hero__image"
+          src="./assets/images/fallen-angel.jpg"
+          alt="fallen angel art work"
+        />
+        <h1 class="hero__title">Prodip Bain</h1>
+      </div>
+    </section>
+
+    
     <script src="./main.js"></script>
   </body>
 </html>
