--- a/index.html
+++ b/index.html
@@ -3586,6 +3586,76 @@
               Short description of the project. Just a couple sentences will do.
             </p>
           </div>
+
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img class="project__github__icon" src="./assets/icons/github.svg" alt="github svg">
+                <img class="project__open-in-new__icon" src="./assets/icons/open-in-new.svg" alt="open-in-new link">
+              </div>
+            </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img class="project__github__icon" src="./assets/icons/github.svg" alt="github svg">
+                <img class="project__open-in-new__icon" src="./assets/icons/open-in-new.svg" alt="open-in-new link">
+              </div>
+            </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img class="project__github__icon" src="./assets/icons/github.svg" alt="github svg">
+                <img class="project__open-in-new__icon" src="./assets/icons/open-in-new.svg" alt="open-in-new link">
+              </div>
+            </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img class="project__github__icon" src="./assets/icons/github.svg" alt="github svg">
+                <img class="project__open-in-new__icon" src="./assets/icons/open-in-new.svg" alt="open-in-new link">
+              </div>
+            </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
+          
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img class="project__github__icon" src="./assets/icons/github.svg" alt="github svg">
+                <img class="project__open-in-new__icon" src="./assets/icons/open-in-new.svg" alt="open-in-new link">
+              </div>
+            </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
+          </div>
       </div>
     </section>
     <script src="./main.js"></script>
