Add row div around project card in index.html for apply flex

--- a/index.html
+++ b/index.html
@@ -207,140 +207,142 @@
     <section class="projects">
       <div class="container">
         <h2 class="section__title">Projects</h2>
-
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+        <div class="row">
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
-        </div>
 
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
-        </div>
 
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
-        </div>
 
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
-        </div>
 
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
-        </div>
 
-        <div class="project__card">
-          <img class="project__screenshoot" src="" alt="" />
-          <div class="project__name_and_icons">
-            <h4 class="project__name">Project name</h4>
-            <div class="project__icons">
-              <img
-                class="project__github__icon"
-                src="./assets/icons/github.svg"
-                alt="github svg"
-              />
-              <img
-                class="project__open-in-new__icon"
-                src="./assets/icons/open-in-new.svg"
-                alt="open-in-new link"
-              />
+          <div class="project__card">
+            <img class="project__screenshoot" src="" alt="" />
+            <div class="project__name_and_icons">
+              <h4 class="project__name">Project name</h4>
+              <div class="project__icons">
+                <img
+                  class="project__github__icon"
+                  src="./assets/icons/github.svg"
+                  alt="github svg"
+                />
+                <img
+                  class="project__open-in-new__icon"
+                  src="./assets/icons/open-in-new.svg"
+                  alt="open-in-new link"
+                />
+              </div>
             </div>
+            <p class="project__description">
+              Short description of the project. Just a couple sentences will do.
+            </p>
           </div>
-          <p class="project__description">
-            Short description of the project. Just a couple sentences will do.
-          </p>
         </div>
       </div>
     </section>
+
     <script src="./main.js"></script>
   </body>
 </html>
