Add dummy testimonial section for future upgrade in index.html

--- a/index.html
+++ b/index.html
@@ -343,6 +343,24 @@
       </div>
     </section>
 
+    <section class="testimonials">
+      <div class="container">
+        <h2 class="section__title">Testimonials</h2>
+        <p>
+          Real client feedback coming soon. Until then, here's what people say:
+        </p>
+        <blockquote>
+          “Very responsive, pixel-perfect HTML from Figma designs. Great
+          communicator.”
+          <footer>— UX Designer, Apple (Mock)</footer>
+        </blockquote>
+        <blockquote>
+          “Reliable, fast, and easy to work with. Highly recommend for front-end
+          projects.”
+          <footer>— Tech Lead, Google (Mock) </footer>
+        </blockquote>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
