Add resume section with download, view buttons in index.html

--- a/index.html
+++ b/index.html
@@ -357,8 +357,23 @@
         <blockquote>
           “Reliable, fast, and easy to work with. Highly recommend for front-end
           projects.”
-          <footer>— Tech Lead, Google (Mock) </footer>
+          <footer>— Tech Lead, Google (Mock)</footer>
         </blockquote>
+      </div>
+    </section>
+
+    <section class="resume">
+      <div class="conatiner">
+        <h2 class="section__title">Resume</h2>
+        <p>This is my general resume. For job-specific or updated versions, fell free to contact me.</p>
+        <div class="resume-buttons">
+          <a href="./assets/resume/Prodip_Bain_Resume.pdf" download>
+            <button class="resume__btn">Download Resume</button>
+          </a>
+          <a href="./assets/resume/Prodip_Bain_Resume.pdf" target="_blank">
+            <button class="resume__btn">View Resume</button>
+          </a>
+        </div>
       </div>
     </section>
     <script src="./main.js"></script>
