Add contact section in index.html

--- a/index.html
+++ b/index.html
@@ -365,7 +365,10 @@
     <section class="resume">
       <div class="conatiner">
         <h2 class="section__title">Resume</h2>
-        <p>This is my general resume. For job-specific or updated versions, fell free to contact me.</p>
+        <p>
+          This is my general resume. For job-specific or updated versions, fell
+          free to contact me.
+        </p>
         <div class="resume-buttons">
           <a href="./assets/resume/Prodip_Bain_Resume.pdf" download>
             <button class="resume__btn">Download Resume</button>
@@ -374,6 +377,40 @@
             <button class="resume__btn">View Resume</button>
           </a>
         </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="container">
+        <div class="contact__info">
+          <h2 class="section__title">Contact</h2>
+          <p class="contact__text">
+            Please get in touch if you think our work could ne mutually
+            beneficial!
+          </p>
+          <p class="contact__address">Malibagh, Dhaka 1217, Bangladesh.</p>
+          <div class="contact__num_info">
+            <img
+              class="contact__phone__icon"
+              src="./assets/icons/phone.svg"
+              alt="phone"
+            />
+            <p class="contact__number">+8801768021717</p>
+          </div>
+          <div class="contact__email_info">
+            <img
+              class="contact__email__icon"
+              src="./assets/icons/email.svg"
+              alt="email"
+            />
+            <p class="contact__email">prodipbain63@gmail.com</p>
+          </div>
+          <div class="contact__social-icons">
+            <img class="contact__github-icon" src="./assets/icons/github.svg" alt="github">
+            <img class="contact__linkedin-icon" src="./assets/icons/linkedin.svg" alt="linkedin">
+          </div>
+        </div>
+        <img class="contact__image" src="" alt="">
       </div>
     </section>
     <script src="./main.js"></script>
