Add two different wrapper on hero section. Add map maker sign and add wrapper around it in conatct section. And update different class name of contact section in index.html

--- a/index.html
+++ b/index.html
@@ -40,37 +40,36 @@
     </header>
 
     <section class="hero">
-      <div class="container">
-        <img
-          class="hero__image"
-          src="./assets/images/fallen-angel.jpg"
-          alt="fallen angel art work"
-        />
-        <h1 class="hero__title">Prodip Bain</h1>
-      </div>
-    </section>
-
-    <section class="about_me">
-      <div class="container">
-        <h2 class="section__title">About Me</h2>
-        <p class="about_me__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil soluta
-          unde aperiam accusantium officiis, ducimus tempore velit numquam
-          veritatis! Eius dolore dignissimos cum? Hic incidunt repellat ad
-          commodi in. Minus?
-        </p>
-        <div class="about_me__icons">
+      <div class="container row">
+        <div class="hero__image--wrapper">
           <img
-            class="about_me__github__icon"
-            src="./assets/icons/github.svg"
-            alt="github"
+            class="hero__image"
+            src="./assets/images/fallen-angel.jpg"
+            alt="fallen angel art work"
           />
+          <h1 class="hero__title">Prodip Bain</h1>
+        </div>
 
-          <img
-            class="about_me__linkedin__icon"
-            src="./assets/icons/linkedin.svg"
-            alt="linkedin"
-          />
+        <div class="about_me--wrapper">
+          <h2 class="section__title">About Me</h2>
+          <p class="about_me__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+            soluta unde aperiam accusantium officiis, ducimus tempore velit
+            numquam veritatis! Eius dolore dignissimos cum? Hic incidunt
+            repellat ad commodi in. Minus?
+          </p>
+          <div class="about_me__icons">
+            <img
+              class="about_me__github__icon"
+              src="./assets/icons/github.svg"
+              alt="github"
+            />
+            <img
+              class="about_me__linkedin__icon"
+              src="./assets/icons/linkedin.svg"
+              alt="linkedin"
+            />
+          </div>
         </div>
       </div>
     </section>
@@ -216,7 +215,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -238,7 +237,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -260,7 +259,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -282,7 +281,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -304,7 +303,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -326,7 +325,7 @@
                 <img
                   class="project__github__icon"
                   src="./assets/icons/github.svg"
-                  alt="github svg"
+                  alt="github"
                 />
                 <img
                   class="project__open-in-new__icon"
@@ -388,8 +387,15 @@
             Please get in touch if you think our work could ne mutually
             beneficial!
           </p>
-          <p class="contact__address">Malibagh, Dhaka 1217, Bangladesh.</p>
-          <div class="contact__num_info">
+          <div class="contact__address--info">
+            <img
+              class="contact__map-maker__icon"
+              src="./assets/icons/map-marker.svg"
+              alt="map maker"
+            />
+            <p class="contact__address">Malibagh, Dhaka 1217, Bangladesh.</p>
+          </div>
+          <div class="contact__num--info">
             <img
               class="contact__phone__icon"
               src="./assets/icons/phone.svg"
@@ -397,7 +403,7 @@
             />
             <p class="contact__number">+8801768021717</p>
           </div>
-          <div class="contact__email_info">
+          <div class="contact__email--info">
             <img
               class="contact__email__icon"
               src="./assets/icons/email.svg"
@@ -405,12 +411,20 @@
             />
             <p class="contact__email">prodipbain63@gmail.com</p>
           </div>
-          <div class="contact__social-icons">
-            <img class="contact__github-icon" src="./assets/icons/github.svg" alt="github">
-            <img class="contact__linkedin-icon" src="./assets/icons/linkedin.svg" alt="linkedin">
+          <div class="contact__social--icons">
+            <img
+              class="contact__github--icon"
+              src="./assets/icons/github.svg"
+              alt="github"
+            />
+            <img
+              class="contact__linkedin--icon"
+              src="./assets/icons/linkedin.svg"
+              alt="linkedin"
+            />
           </div>
         </div>
-        <img class="contact__image" src="" alt="">
+        <img class="contact__image" src="" alt="" />
       </div>
     </section>
     <script src="./main.js"></script>
