--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <body>
     <header>
       <div class="container row">
-        <button class="nav-toggle" aria-label="open navigation">
-          <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-          <ul class="nav__list nav__list--primary">
+        <div class="header__name">Prodip Bain</div>
+        <nav class="nav" role="navigation">
+          <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__link" href="#">About Me</a>
             </li>
@@ -26,8 +24,6 @@
             <li class="nav__item">
               <a class="nav__link" href="#">Testimonials</a>
             </li>
-          </ul>
-          <ul class="nav__list nav__list--secondary">
             <li class="nav__item">
               <a class="nav__link" href="#">Resume</a>
             </li>
@@ -36,6 +32,14 @@
             </li>
           </ul>
         </nav>
+
+        <button
+          class="nav-toggle"
+          aria-label="Toggle navigation"
+          aria-expanded="false"
+        >
+          ☰
+        </button>
       </div>
     </header>
 
