Add picture tag with responsive images to hero section in index.html

--- a/index.html
+++ b/index.html
@@ -52,11 +52,35 @@
         <div class="background-shape"></div>
         <div class="container">
           <div class="hero__image--content">
-            <img
-              class="hero__image"
-              src="./assets/images/fallen-angel.jpg"
-              alt="fallen angel art work"
-            />
+            <picture>
+              <img
+                sizes="(max-width: 1400px) 100vw, 1400px"
+                srcset="
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_200.png   200w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_343.png   343w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_451.png   451w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_547.png   547w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_628.png   628w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_701.png   701w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_771.png   771w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_839.png   839w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_902.png   902w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_961.png   961w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1016.png 1016w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1072.png 1072w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1124.png 1124w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1176.png 1176w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1227.png 1227w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1278.png 1278w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1331.png 1331w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1377.png 1377w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1393.png 1393w,
+                  assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1400.png 1400w
+                "
+                src="assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_1400.png"
+                alt="prodip"
+              />
+            </picture>
             <h1 class="hero__title">Prodip Bain</h1>
           </div>
           <div class="about_me--content">
