Add class to hero image and add span between hero title for word break requirements

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <div class="background-shape"></div>
         <div class="container">
           <div class="hero__image--content">
+            <!--images get from responsivebreakpoints.com -->
             <picture>
               <img
+                class="hero__image"
                 sizes="(max-width: 1400px) 100vw, 1400px"
                 srcset="
                   assets/images/pro_2_qlph4y/pro_2_qlph4y_c_scale,w_200.png   200w,
@@ -81,7 +83,7 @@
                 alt="prodip"
               />
             </picture>
-            <h1 class="hero__title">Prodip Bain</h1>
+            <h1 class="hero__title"><span>Prodip</span> <span>Bain</span></h1>
           </div>
           <div class="about_me--content">
             <h2 class="section__title">About Me</h2>
