Add dummy text to about me section in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
               soluta unde aperiam accusantium officiis, ducimus tempore velit
               numquam veritatis! Eius dolore dignissimos cum? Hic incidunt
-              repellat ad commodi in. Minus?
+              repellat ad commodi in. Minus? Lorem, ipsum dolor sit amet
+              consectetur adipisicing elit. Nemo nulla recusandae et accusantium
+              cumque dolorum, numquam omnis nesciunt aliquid consequuntur. Iure
+              nesciunt hic unde. Facilis impedit commodi sed quod voluptate.
             </p>
             <div class="about_me__icons">
               <img
