Replace class row with project__card--wrapper in projects section in index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <section class="projects">
         <div class="container">
           <h2 class="section__title">Projects</h2>
-          <div class="row">
+          <div class="project__card--wrapper">
             <div class="project__card">
               <img class="project__screenshoot" src="" alt="" />
               <div class="project__name_and_icons">
