--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h1 class="hero__title"><span>Prodip</span> <span>Bain</span></h1>
           </div>
           <div class="about_me--content">
-            <h2 class="section__title">About Me</h2>
+            <h2 class="about_me--heading">About Me</h2>
             <p class="about_me__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
               soluta unde aperiam accusantium officiis, ducimus tempore velit
@@ -115,6 +115,7 @@
 
       <section class="skills">
         <div class="container">
+          <h2 class="section__title">Skills</h2>
           <div class="frontend">
             <h3 class="skills__heading">Frontend</h3>
             <div class="skills__items">
