Add common class to every skils card section in index.html

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
       <section class="skills">
         <div class="container">
           <h2 class="section__title">Skills</h2>
-          <div class="frontend">
+          <div class="frontend skills__card">
             <h3 class="skills__heading">Frontend</h3>
+            <!-- <div class="skills__items--container"> -->
             <div class="skills__items">
               <img
                 class="skills__items__icon"
@@ -150,9 +151,10 @@
               />
               <h4 class="skills__items__name">React</h4>
             </div>
+            <!-- </div> -->
           </div>
 
-          <div class="backend">
+          <div class="backend skills__card">
             <h3 class="skills__heading">Backend</h3>
             <div class="skills__items">
               <img
@@ -182,7 +184,7 @@
             </div>
           </div>
 
-          <div class="tools">
+          <div class="tools skills__card">
             <h3 class="skills__heading">Tolls</h3>
             <div class="skills__items">
               <img
@@ -221,7 +223,7 @@
             </div>
           </div>
 
-          <div class="dev-environments">
+          <div class="dev-environments skills__card">
             <h3 class="skills__heading">Development Environments</h3>
             <div class="skills__items">
               <img
@@ -229,7 +231,7 @@
                 src="./assets/icons/linux.svg"
                 alt="linux"
               />
-              <h4 class="skills__items__name">Linux (Ubuntu, Xubuntu)</h4>
+              <h4 class="skills__items__name">Linux</h4>
             </div>
 
             <div class="skills__items">
