Update screenshot image to projets in index.html

--- a/index.html
+++ b/index.html
@@ -118,40 +118,40 @@
           <h2 class="section__title">Skills</h2>
           <div class="frontend skills__card">
             <h3 class="skills__heading">Frontend</h3>
-            <!-- <div class="skills__items--container"> -->
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/language-html5.svg"
-                alt="HTML5"
-              />
-              <h4 class="skills__items__name">HTML5</h4>
+            <div class="skills__items--container">
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/language-html5.svg"
+                  alt="HTML5"
+                />
+                <h4 class="skills__items__name">HTML5</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/language-css3.svg"
+                  alt="CSS3"
+                />
+                <h4 class="skills__items__name">CSS3</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/language-javascript.svg"
+                  alt="javascript"
+                />
+                <h4 class="skills__items__name">JavaScript</h4>
+              </div>
+              <div class="skills__items">
+                <img
+                  class="skills__items__icon"
+                  src="./assets/icons/react.svg"
+                  alt="react"
+                />
+                <h4 class="skills__items__name">React</h4>
+              </div>
             </div>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/language-css3.svg"
-                alt="CSS3"
-              />
-              <h4 class="skills__items__name">CSS3</h4>
-            </div>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/language-javascript.svg"
-                alt="javascript"
-              />
-              <h4 class="skills__items__name">JavaScript</h4>
-            </div>
-            <div class="skills__items">
-              <img
-                class="skills__items__icon"
-                src="./assets/icons/react.svg"
-                alt="react"
-              />
-              <h4 class="skills__items__name">React</h4>
-            </div>
-            <!-- </div> -->
           </div>
 
           <div class="backend skills__card">
@@ -250,9 +250,13 @@
           <h2 class="section__title">Projects</h2>
           <div class="project__card--wrapper">
             <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
+              <img
+                class="project__screenshoot"
+                src="./assets/screenshots/f_d_a_home_page.png"
+                alt="home page screenshot"
+              />
               <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
+                <h4 class="project__name">Food Delivery App</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
