Update skills names to skills section in index.html

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 src="./assets/icons/linux.svg"
                 alt="linux"
               />
-              <h4 class="skills__items__name">Linux</h4>
+              <h4 class="skills__items__name">Linux (Ubuntu)</h4>
             </div>
 
             <div class="skills__items">
@@ -256,7 +256,7 @@
                 alt="home page screenshot"
               />
               <div class="project__name_and_icons">
-                <h4 class="project__name">Food Delivery App</h4>
+                <h4 class="project__name">Food Delivery App - MVP Build</h4>
                 <div class="project__icons">
                   <img
                     class="project__github__icon"
