Add project image container with project image in index.html

--- a/index.html
+++ b/index.html
@@ -277,7 +277,42 @@
             </div>
 
             <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="desktop view of "
+                />
+              </div>
+              <div class="project__name_and_icons">
+                <h4 class="project__name">Responsive website layout</h4>
+                <div class="project__icons">
+                  <img
+                    class="project__github__icon"
+                    src="./assets/icons/github.svg"
+                    alt="github"
+                  />
+                  <img
+                    class="project__open-in-new__icon"
+                    src="./assets/icons/open-in-new.svg"
+                    alt="open-in-new link"
+                  />
+                </div>
+              </div>
+              <p class="project__description">
+                Short description of the project. Just a couple sentences will
+                do.
+              </p>
+            </div>
+
+            <div class="project__card">
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="desktop view of "
+                />
+              </div>
               <div class="project__name_and_icons">
                 <h4 class="project__name">Project name</h4>
                 <div class="project__icons">
@@ -300,7 +335,13 @@
             </div>
 
             <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="desktop view of "
+                />
+              </div>
               <div class="project__name_and_icons">
                 <h4 class="project__name">Project name</h4>
                 <div class="project__icons">
@@ -323,7 +364,13 @@
             </div>
 
             <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="desktop view of "
+                />
+              </div>
               <div class="project__name_and_icons">
                 <h4 class="project__name">Project name</h4>
                 <div class="project__icons">
@@ -346,30 +393,13 @@
             </div>
 
             <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
-              <div class="project__name_and_icons">
-                <h4 class="project__name">Project name</h4>
-                <div class="project__icons">
-                  <img
-                    class="project__github__icon"
-                    src="./assets/icons/github.svg"
-                    alt="github"
-                  />
-                  <img
-                    class="project__open-in-new__icon"
-                    src="./assets/icons/open-in-new.svg"
-                    alt="open-in-new link"
-                  />
-                </div>
+              <div class="project-image">
+                <img
+                  class="project__screenshoot"
+                  src="./assets/screenshots/desktop-view.png"
+                  alt="desktop view of "
+                />
               </div>
-              <p class="project__description">
-                Short description of the project. Just a couple sentences will
-                do.
-              </p>
-            </div>
-
-            <div class="project__card">
-              <img class="project__screenshoot" src="" alt="" />
               <div class="project__name_and_icons">
                 <h4 class="project__name">Project name</h4>
                 <div class="project__icons">
